--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12866.156347418122!2d126.87353079835924!3d36.274967482522506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357075eec4bd60e9%3A0xad7a945137d97df2!2z67aA7Jes7IaM67Cp7ISc!5e0!3m2!1sko!2skr!4v1667071903717!5m2!1sko!2skr" width="91%" height="230px" style="border: 3px solid wheat; margin-top: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="specific_location">
                     부여소방서 3층 대회의실<br>
-                    부여군 규암면 외리 212<br>
+                    부여군 규암면 계백로 17<br>
                 </div>
                 <div class="composer">
                     <img src="./images/fireforce_logo.png" class="logo">&nbsp;
